# markit

./: .gitignore  .pre-commit-config.yaml  README.md  anthropic.py  anthropic_client.py  main.py  onedrive.py  pyproject.toml  search.py
ai_interfaces/: anthropic_interface.py  base_interface.py  perplexity_interface.py
